# RepoRover

./: .env.production  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  chat.html  index.html  main.py  processing.html  pyproject.toml  requirements-dev.txt  requirements.txt
frontend/: index.html
frontend/pages/: chat_screen.html  processing.html  welcome.html
memory/: README.md  __init__.py  config.yaml  core_memory.py  episodic_memory.py  graph_db.py  resource_memory.py  vector_store.py
memory/graph_db/: __init__.py  builder.py  graph_memory.py  model.py  querier.py  utils.py
src/agents/: annotator.py  architect.py  base.py  dispatcher.py  information_retriever.py  librarian.py  query_planner.py  synthesizer.py
src/agents/query_planner/: __init__.py  agent.py  tools.py
src/core/: config.py  exceptions.py
src/memory/: base.py  core_memory.py
src/memory/episodic_memory/: db.py  manager.py
src/memory/procedural_memory/: manager.py  workflow.py
src/memory/semantic_memory/: __init__.py  entity_store.py  manager.py
src/memory/semantic_memory/graph_db/: __init__.py  base.py  networkX_graph.py
src/memory/semantic_memory/vector_store/: __init__.py  base.py  (+2 more)
src/models/: __init__.py  base.py  geminiModel.py  groqModel.py  hfModel.py
src/tools/: __init__.py  code_parser.py  repo_cloner.py  semantic_memory_tools.py  text_chunker.py
static/css/: styles.css
static/js/: chat.js  processing.js
static/stylesheet/js/: main.js  utils.js
tests/: test_memory.py
workflows/: ingestion_workflow.json  query_workflow.json
