[tool.poetry]
name = "reporover"
version = "0.1.0"
description = "An advanced AI agent for understanding GitHub repositories"
authors = ["Sujal Nath <sujalnath14@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"

# LLM
openai = "^1.0.0"
langchain = "^0.0.335"

# Memory Systems
chromadb = "^0.4.18"
neo4j = "^5.13.0"
sqlalchemy = "^2.0.23"

# Git Operations
GitPython = "^3.1.37"

# Code Analysis
tree-sitter = "^0.20.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.6.1"
flake8 = "^6.1.0"
pylint = "^3.0.2"
pre-commit = "^3.5.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
